apps/linkding/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: linkding
spec:
  ports:
    - port: 80
      targetPort: linkding
  selector:
    app.kubernetes.io/name: linkding
