apps/linkding/networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: linkding
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: "linkding"
  policyTypes:
    - Egress
    - Ingress
  ingress:
    - ports:
        - protocol: "TCP"
          port: "linkding"
      from: []
  egress:
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: "postgres"
      ports:
        - protocol: "TCP"
          port: 5432
    - to:
        - ipBlock:
            cidr: "0.0.0.0/0"
            except:
              - "192.168.0.0/16"
